Add new message type sources to MSVC projects.

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -107,14 +107,20 @@
     <ClCompile Include="..\..\..\..\test\message\address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\alert.cpp" />
     <ClCompile Include="..\..\..\..\test\message\alert_payload.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\block_transactions.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\compact_block.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_add.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_clear.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_load.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\get_block_transactions.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_headers.cpp" />
     <ClCompile Include="..\..\..\..\test\message\memory_pool.cpp" />
     <ClCompile Include="..\..\..\..\test\message\merkle_block.cpp" />
     <ClCompile Include="..\..\..\..\test\message\pong.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\prefilled_transaction.cpp" />
     <ClCompile Include="..\..\..\..\test\message\reject.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\send_compact_blocks.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\send_headers.cpp" />
     <ClCompile Include="..\..\..\..\test\message\version.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_blocks.cpp" />
