--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -127,16 +127,22 @@
     <ClCompile Include="..\..\..\..\src\message\address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\alert.cpp" />
     <ClCompile Include="..\..\..\..\src\message\alert_payload.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\block_transactions.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\compact_block.cpp" />
     <ClCompile Include="..\..\..\..\src\message\filter_add.cpp" />
     <ClCompile Include="..\..\..\..\src\message\filter_clear.cpp" />
     <ClCompile Include="..\..\..\..\src\message\filter_load.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\get_block_transactions.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_headers.cpp" />
     <ClCompile Include="..\..\..\..\src\message\headers.cpp" />
     <ClCompile Include="..\..\..\..\src\message\memory_pool.cpp" />
     <ClCompile Include="..\..\..\..\src\message\merkle_block.cpp" />
     <ClCompile Include="..\..\..\..\src\message\nonce.cpp" />
     <ClCompile Include="..\..\..\..\src\message\pong.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\prefilled_transaction.cpp" />
     <ClCompile Include="..\..\..\..\src\message\reject.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\send_compact_blocks.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\send_headers.cpp" />
     <ClCompile Include="..\..\..\..\src\message\version.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_blocks.cpp" />
@@ -245,9 +251,12 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\alert.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\alert_payload.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\block_transactions.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\compact_block.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\filter_add.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\filter_clear.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\filter_load.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_block_transactions.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_headers.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\headers.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\memory_pool.hpp" />
@@ -255,7 +264,10 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\nonce.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\ping.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\pong.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\prefilled_transaction.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\reject.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_compact_blocks.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_headers.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\version.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_blocks.hpp" />
