--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="..\..\..\..\test\message\address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\alert.cpp" />
     <ClCompile Include="..\..\..\..\test\message\alert_payload.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\block_message.cpp" />
     <ClCompile Include="..\..\..\..\test\message\block_transactions.cpp" />
     <ClCompile Include="..\..\..\..\test\message\compact_block.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_add.cpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="..\..\..\..\test\message\reject.cpp" />
     <ClCompile Include="..\..\..\..\test\message\send_compact_blocks.cpp" />
     <ClCompile Include="..\..\..\..\test\message\send_headers.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\transaction_message.cpp" />
     <ClCompile Include="..\..\..\..\test\message\version.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_blocks.cpp" />
