--- a/Makefile.am
+++ b/Makefile.am
@@ -118,6 +118,7 @@ src_libbitcoin_la_SOURCES = \
     src/message/get_blocks.cpp \
     src/message/get_data.cpp \
     src/message/get_headers.cpp \
+    src/message/header_message.cpp \
     src/message/headers.cpp \
     src/message/heading.cpp \
     src/message/inventory.cpp \
@@ -421,6 +422,7 @@ include_bitcoin_bitcoin_message_HEADERS = \
     include/bitcoin/bitcoin/message/get_blocks.hpp \
     include/bitcoin/bitcoin/message/get_data.hpp \
     include/bitcoin/bitcoin/message/get_headers.hpp \
+    include/bitcoin/bitcoin/message/header_message.hpp \
     include/bitcoin/bitcoin/message/headers.hpp \
     include/bitcoin/bitcoin/message/heading.hpp \
     include/bitcoin/bitcoin/message/inventory.hpp \
