Add fee_filter to VS projects.

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -110,6 +110,7 @@
     <ClCompile Include="..\..\..\..\test\message\block_message.cpp" />
     <ClCompile Include="..\..\..\..\test\message\block_transactions.cpp" />
     <ClCompile Include="..\..\..\..\test\message\compact_block.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\fee_filter.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_add.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_clear.cpp" />
     <ClCompile Include="..\..\..\..\test\message\filter_load.cpp" />
