--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,9 @@ script:
 
 after_success:
 
+    # Patch homebrew libtool installation.
+    - if [[ $OSX                         ]]; then brew uninstall libtool && brew install libtool; fi
+
     # Install coveralls and current lcov.
     - if [[ $LINUX && $GCC   && $STATIC  ]]; then wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz; fi
     - if [[ $LINUX && $GCC   && $STATIC  ]]; then tar xf lcov_1.11.orig.tar.gz; fi
