--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -228,6 +228,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base2.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base58.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base64.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\settings.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\sodium.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\hash160.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\hash256.hpp" />
