--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -1066,6 +1066,9 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\limits.hpp">
       <Filter>include\bitcoin\math</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\settings.hpp">
+      <Filter>include\bitcoin\config</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\resource.rc">
