--- a/builds/msvc/vs2013/libbitcoin-examples/packages.config
+++ b/builds/msvc/vs2013/libbitcoin-examples/packages.config
@@ -4,11 +4,12 @@
   <package id="boost_chrono-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_date_time-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_filesystem-vc120" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_iostreams-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_locale-vc120" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_log-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_program_options-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_regex-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_system-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_thread-vc120" version="1.56.0.0" targetFramework="Native" />
-  <package id="boost_unit_test_framework-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="secp256k1_vc120" version="0.1.0.13" targetFramework="Native" />
 </packages>
