--- a/builds/msvc/vs2013/libbitcoin-test/packages.config
+++ b/builds/msvc/vs2013/libbitcoin-test/packages.config
@@ -6,6 +6,7 @@
   <package id="boost_filesystem-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_iostreams-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_locale-vc120" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_log-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_program_options-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_regex-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_system-vc120" version="1.56.0.0" targetFramework="Native" />
