--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="..\..\..\..\src\formats\base_58.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base_64.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base_85.cpp" />
+    <ClCompile Include="..\..\..\..\src\log\sinks.cpp" />
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
     <ClCompile Include="..\..\..\..\src\math\crypto.cpp" />
     <ClCompile Include="..\..\..\..\src\math\elliptic_curve.cpp" />
@@ -175,7 +176,6 @@
     <ClCompile Include="..\..\..\..\src\utility\monitor.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\png.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\random.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\log.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\ostream_writer.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\conditional_lock.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\scope_lock.cpp" />
@@ -250,6 +250,10 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_64.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_85.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\handlers.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\attributes.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\severity.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\sinks.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\sources.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\crypto.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\elliptic_curve.hpp" />
@@ -331,7 +335,6 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\exceptions.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\istream_reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\random.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\log.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\ostream_writer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\serializer.hpp" />
